# mac-call-rec

./: .env.example  .gitignore  AFTER_REBOOT.md  ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
recorder/: __main__.py  audio.py  cli.py  config.py  create_multi_output.py  recording.py  setup_helper.py
scripts/: bootstrap_macos.sh  capture_mic_pa.py  capture_system_audio.swift  create_multi_output.swift  diag_diarize.py  diag_postmortem.py  diag_preflight.py  enroll_speakers.py  live_stream_transcribe.py  oneshot_transcribe_mic.py  transcribe.py  transcribe_gemini.py
tests/: test_audio.py  test_cli.py  test_config.py  test_diag_postmortem.py  test_recording.py  test_setup_helper.py
